testing time type

--- a/Fucking Alarm 121012.html
+++ b/Fucking Alarm 121012.html
@@ -80,6 +80,9 @@ h4 {
     	<label for="basic">Text Input:</label>
     	<input type="text" name="name" id="basic" value=""  />
 		
+    	<label for="basic">Time:</label>
+    	<input type="time" name="name" id="basic" value=""  />
+
 	</div> <!--content-->
    	
     <div data-role="footer" data-position="fixed"> 
