--- a/Fucking Alarm 121012.html
+++ b/Fucking Alarm 121012.html
@@ -81,7 +81,7 @@ h4 {
     	<input type="text" name="name" id="basic" value=""  />
 		
     	<label for="basic">Time:</label>
-    	<input type="time" name="name" id="basic" value=""  />
+    	<input type="time" name="name" value=""  />
 
 	</div> <!--content-->
    	
