Changed Text Box color…. I hope

--- a/Fucking Alarm 121012.html
+++ b/Fucking Alarm 121012.html
@@ -62,26 +62,26 @@ h4 {
 </div> <!--page-->
 
 <!--start of edit page page-->
-<div data-role="page" id="edit" data-theme="b">
+<div data-role="page" id="edit" data-theme="a">
 	<div data-role="header" data-position="fixed">
 		<a href="#home" data-icon="back" data-iconpos="notext" data-transition="flip">Add</a>
 		<a href="#home" data-icon="check" data-iconpos="notext" data-transition="flip">Edit</a>
 	</div> <!--header-->
 
-    <div data-role="content" id="content" data-theme="b"> 
+    <div data-role="content" id="content" data-theme="a"> 
 		<h1>EDIT ALARM</h1>
 
 		<label for="basic">Alarm ID:</label>
-    	<input type="text" name="alarmID" id="basic" value=""  />
+    	<input type="text" data-theme="b" name="alarmID" id="basic" value=""  />
 
     	<label for="basic">Alarm Name:</label>
-    	<input type="text" name="alarmName" id="basic" value=""  />
+    	<input type="text" data-theme="b" name="alarmName" id="basic" value=""  />
 
     	<label for="basic">Text Input:</label>
-    	<input type="text" name="name" id="basic" value=""  />
+    	<input type="text" data-theme="b" name="name" id="basic" value=""  />
 		
     	<label for="basic">Time:</label>
-    	<input type="time" name="name" value=""  />
+    	<input type="time" data-theme="b" name="name" id="basic" value=""  />
 
 	</div> <!--content-->
    	
@@ -91,14 +91,14 @@ h4 {
 </div> <!--page-->
 
 <!--start of new alarm page page-->
-<div data-role="page" id="new" data-theme="b">
+<div data-role="page" id="new" data-theme="a">
 	<div data-role="header" data-position="fixed">
 		<a href="#home" data-icon="back" data-iconpos="notext" data-transition="flip">Add</a>
 		<h1>NEW ALARM</h1>
 		<a href="#home" data-icon="check" data-iconpos="notext" data-transition="flip">Edit</a>
 	</div> <!--header-->
     
-    <div data-role="content" id="content" data-theme="b"> 
+    <div data-role="content" id="content" data-theme="a"> 
 		<h4>some content</h4>
         <p> content </p> 
 	</div> <!--content-->
