--- a/Fucking Alarm 121012.html
+++ b/Fucking Alarm 121012.html
@@ -71,7 +71,8 @@ h4 {
     <div data-role="content" id="content" data-theme="b"> 
 		<h1>EDIT ALARM</h1>
 
-		<label for="basic">Alarm ID:</label> <input type="text" name="alarmID" id="basic" value=""  />
+		<label for="basic">Alarm ID:</label> 
+		<input type="text" name="alarmID" id="basic" value=""  />
 
     	<label for="basic">Alarm Name:</label>
     	<input type="text" name="alarmName" id="basic" value=""  />
