--- a/Social Alarm version with Clock.html
+++ b/Social Alarm version with Clock.html
@@ -36,10 +36,11 @@
 
     #clock {
     position: relative;
-    width: 600px;
-    height: 600px;
+    width: 640px;
+    height: 900px;
     margin: 20px auto 0 auto;
-    background: url(https://raw.github.com/kgmodi/smart-alarm/master/CSS3Clock/images/clockface3.png);
+    background: url(https://raw.github.com/kgmodi/smart-alarm/master/CSS3Clock/images/clockface4.png);
+    background-repeat: no-repeat;
     list-style: none;
     z-index: 1;
     }
@@ -48,6 +49,7 @@
     position: absolute;
     width: 30px;
     height: 600px;
+    background-repeat: no-repeat;
     top: 0px;
     left: 285px;
     }
