changed min hand.....again

--- a/Social Alarm version with Clock.html
+++ b/Social Alarm version with Clock.html
@@ -60,7 +60,8 @@
     } */
            
     #min {
-    background: url(https://raw.github.com/kgmodi/smart-alarm/master/CSS3Clock/images/minhand2.png);
+    background: url(https://raw.github.com/kgmodi/smart-alarm/master/CSS3Clock/images/minhand3.png);
+    background-repeat: no-repeat;
     z-index: 2;
     }
            
