--- a/Alarm 121012.html
+++ b/Alarm 121012.html
@@ -77,10 +77,10 @@ h4 {
     	<label for="basic">Alarm Name:</label>
     	<input type="text" data-theme="b" name="alarmName" id="basic" value=""  />
 
-    	<label for="basic">Text Input:</label>
+    	<label for="basic">Friend's Username:</label>
     	<input type="text" data-theme="b" name="name" id="basic" value=""  />
 		
-    	<label for="basic">Time:</label>
+    	<label for="basic">Alarm:</label>
     	<input type="time" data-theme="b" name="name" id="basic" value=""  />
 
 	</div> <!--content-->
@@ -96,11 +96,21 @@ h4 {
 		<a href="#home" data-icon="back" data-iconpos="notext" data-transition="flip">Add</a>
 		<h1>NEW ALARM</h1>
 		<a href="#home" data-icon="check" data-iconpos="notext" data-transition="flip">Edit</a>
+
 	</div> <!--header-->
     
     <div data-role="content" id="content" data-theme="a"> 
-		<h4>some content</h4>
-        <p> content </p> 
+		<label for="basic">Alarm ID:</label>
+    	<input type="text" data-theme="b" name="alarmID" id="basic" value=""  />
+
+    	<label for="basic">Alarm Name:</label>
+    	<input type="text" data-theme="b" name="alarmName" id="basic" value=""  />
+
+    	<label for="basic">Friend's Username:</label>
+    	<input type="text" data-theme="b" name="name" id="basic" value=""  />
+		
+    	<label for="basic">Alarm:</label>
+    	<input type="time" data-theme="b" name="name" id="basic" value=""  />
 	</div> <!--content-->
    	
     <div data-role="footer" data-position="fixed"> 
