--- a/Alarm 121012.html
+++ b/Alarm 121012.html
@@ -61,7 +61,7 @@ h4 {
 	</div> <!--footer-->    
 </div> <!--page-->
 
-<!--start of edit page page-->
+<!--start of "edit alarm" page-->
 <div data-role="page" id="edit" data-theme="a">
 	<div data-role="header" data-position="fixed">
 		<a href="#home" data-icon="back" data-iconpos="notext" data-transition="flip">Add</a>
@@ -90,7 +90,7 @@ h4 {
 	</div> <!--footer-->  
 </div> <!--page-->
 
-<!--start of new alarm page page-->
+<!--start of "new alarm" page-->
 <div data-role="page" id="new" data-theme="a">
 	<div data-role="header" data-position="fixed">
 		<a href="#home" data-icon="back" data-iconpos="notext" data-transition="flip">Add</a>
