--- a/Alarm 121012.html
+++ b/Alarm 121012.html
@@ -99,18 +99,18 @@ h4 {
 
 	</div> <!--header-->
     
-    <div data-role="content" id="content" data-theme="a"> 
-		<label for="basic">Alarm ID:</label>
-    	<input type="text" data-theme="b" name="alarmID" id="basic" value=""  />
+    <div data-role="content" id="content" data-theme="a">
 
     	<label for="basic">Alarm Name:</label>
     	<input type="text" data-theme="b" name="alarmName" id="basic" value=""  />
 
-    	<label for="basic">Friend's Username:</label>
+    	<label for="basic">Friend's Phone #:</label>
     	<input type="text" data-theme="b" name="name" id="basic" value=""  />
 		
-    	<label for="basic">Alarm:</label>
+    	<label for="basic">Alarm Time:</label>
     	<input type="time" data-theme="b" name="name" id="basic" value=""  />
+    	<br>
+    	<input type="submit" value="Create New Alarm">
 	</div> <!--content-->
    	
     <div data-role="footer" data-position="fixed"> 
