--- a/Alarm 121012.html
+++ b/Alarm 121012.html
@@ -101,16 +101,19 @@ h4 {
     
     <div data-role="content" id="content" data-theme="a">
 
-    	<label for="basic">Alarm Name:</label>
-    	<input type="text" data-theme="b" name="alarmName" id="basic" value=""  />
+    	<form action="" method="post"> 
+    		<label for="basic">Alarm Name:</label>
+	    	<input type="text" data-theme="b" name="alarmName" id="basic" value=""  />
 
-    	<label for="basic">Friend's Phone #:</label>
-    	<input type="text" data-theme="b" name="name" id="basic" value=""  />
-		
-    	<label for="basic">Alarm Time:</label>
-    	<input type="time" data-theme="b" name="name" id="basic" value=""  />
-    	<br>
-    	<input type="submit" value="Create New Alarm">
+	    	<label for="basic">Friend's Phone #:</label>
+	    	<input type="text" data-theme="b" name="name" id="basic" value=""  />
+			
+	    	<label for="basic">Alarm Time:</label>
+	    	<input type="time" data-theme="b" name="name" id="basic" value=""  />
+	    	<br>
+	    	<input type="submit" value="Create New Alarm">
+    	</form>
+
 	</div> <!--content-->
    	
     <div data-role="footer" data-position="fixed"> 
