--- a/Alarm 121012.html
+++ b/Alarm 121012.html
@@ -101,7 +101,7 @@ h4 {
     
     <div data-role="content" id="content" data-theme="a">
 
-    	<form action="" method="post"> 
+    	<form action="http://192.168.110.182/users/7329836129/alarms" method="post"> 
     		<label for="basic">Alarm Name:</label>
 	    	<input type="text" data-theme="b" name="alarmName" id="basic" value=""  />
 
