--- a/Social Alarm version with 3GS size Clock.html
+++ b/Social Alarm version with 3GS size Clock.html
@@ -39,7 +39,7 @@
     width: 320px;
     height: 480px;
     margin: 20px auto 0 auto;
-    background: url(https://raw.github.com/kgmodi/smart-alarm/master/CSS3Clock/images/clockface5.png);
+    background: url(https://raw.github.com/kgmodi/smart-alarm/master/CSS3Clock/images/clockface6.png);
     background-repeat: no-repeat;
     list-style: none;
     z-index: 1;
@@ -59,7 +59,7 @@
     z-index: 4;
     } */
            
-    #min {
+    /*#min {
     background: url(https://raw.github.com/kgmodi/smart-alarm/master/CSS3Clock/images/minhand3GS.png);
     background-repeat: no-repeat;
     z-index: 2;
@@ -68,7 +68,7 @@
     #hour {
     background: url(https://raw.github.com/kgmodi/smart-alarm/master/CSS3Clock/images/hourhand3GS.png);
     z-index: 3;
-    }
+    } */
 
 	</style>
 
