--- a/Alarm 121012.html
+++ b/Alarm 121012.html
@@ -40,6 +40,24 @@ h4 {
 
 </style>
 
+<script>
+<!--
+$('div.ui-page').live("swipeleft", function(){
+var nextpage = $(this).next('div[data-role="page"]');
+if (nextpage.length > 0) {
+$.mobile.changePage(nextpage, "slide", false, true);
+}
+});
+$('div.ui-page').live("swiperight", function(){
+var prevpage = $(this).prev('div[data-role="page"]');
+if (prevpage.length > 0) {
+$.mobile.changePage(prevpage, {transition: "slide",
+reverse: true}, true, true);
+}
+});
+// -->
+</script>
+
 </head> 
 <body> 
 
