putting dynamic hands back in to 3gs version

--- a/Social Alarm version with 3GS size Clock.html
+++ b/Social Alarm version with 3GS size Clock.html
@@ -54,12 +54,12 @@
     left: 160px;
     }
         
-    /* #sec {
+    #sec {
     background: url(https://raw.github.com/kgmodi/smart-alarm/master/CSS3Clock/images/sechand2.png);
     z-index: 4;
-    } */
+    } 
            
-    /*#min {
+    #min {
     background: url(https://raw.github.com/kgmodi/smart-alarm/master/CSS3Clock/images/minhand3GS.png);
     background-repeat: no-repeat;
     z-index: 2;
@@ -68,7 +68,7 @@
     #hour {
     background: url(https://raw.github.com/kgmodi/smart-alarm/master/CSS3Clock/images/hourhand3GS.png);
     z-index: 3;
-    } */
+    } 
 
 	</style>
 
