updating index and README

--- a/README.html
+++ b/README.html
@@ -1,12 +1,17 @@
-FUNCTIONALITY.
+FUNCTIONALITY
+* Project url : http://websys1.stern.nyu.edu/websysF12/websysF129/smart-alarm/
 * Javascript based analog clock
 * UI to add and edit alarms
 * Login works and makes a call to the backend to verify the user
 * Creating the alarm for the user works.
 * REST calls that work
-	GET http://kunalmodi.com:8080/rest/users/kunal/alarms/6490252580730752
-	GET http://kunalmodi.com:8080/rest/users/kunal
-	POST http://kunalmodi.com:8080/rest/users/kunal/alarms
-* Test account 
-	username : test
-	password : test123
+        GET http://kunalmodi.com:8080/rest/users/kunal/alarms/6490252580730752
+        GET http://kunalmodi.com:8080/rest/users/kunal
+        POST http://kunalmodi.com:8080/rest/users/kunal/alarms
+* Test account
+        username : test
+        password : test123
+* PPT : SmartAlarm Project Document_v3.doc
+* Java REST Webservices
+        In the smartalarm folder, the related java based files can be found.
+* Github: Source code is available at https://github.com/kgmodi/smart-alarm
