--- a/index.html
+++ b/index.html
@@ -170,8 +170,10 @@
 	   		<li id="hour"></li>
         <li id="min"></li>
 		</ul>
+		<a href="http://kunalmodi.com:8080/rest/users/test" target="_blank" data-role="button" data-transition="flip" data-inline="True" class="center">See all Alarms</a>
     </div> <!--content-->
-   	
+
+ 	
   <div data-role="footer" data-position="fixed"> 
 		<h1></h1> 
   </div> <!--footer-->    
